remove some extra stuff